@@ -131,6 +131,8 @@ Beam::Service = 0
 List::Util = 1.39
 Log::Any = 1.708
 Text::CSV = 0
+File::Which = 0
+IPC::System::Simple = 0
 
 [Prereqs / TestRequires]
 
