@@ -1,0 +1,3 @@
+FROM alpine:3.7
+COPY ticker.sh ./
+CMD [ './ticker.sh' ]
