@@ -1,0 +1,6 @@
+#!/bin/sh
+
+for a in { 1 .. 10 }; do
+    echo "$a"
+    sleep 6
+done
